2008-07-19  Nicola Pero <nicola.pero@meta-innovation.com>

	* configure.ac: Documented the --with-additional-include=,
	--with-additional-lib=, --with-postgres-dir= and
	--with-jre-architecture= options.
	* configure: Regenerated.
	* config.h.in: Regenerated.
	
2008-03-03 Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.h:
	* SQLClient.m:
	* ECPG.pgm:
	* MySQL.m:
	* Postgres.m:
	* SQLite.m:
	* JDBC.m:
	Alter to allow control of both the way records are strored and
	the way they are listed ... so people can make performance
	optimisations.

2008-02-21 Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.h:
	* SQLClient.m:
	Experimental new method to set a thread to do all cached
	queries on and to perform asynchronous updates if other
	threads request information which is in the cache but
	past its expiry date.  Should allow threads to use
	config information from a database without blocking
	unnecessarily.

2008-02-15 Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.m: Fix memory leak when executing transaction.

2007-10-23 Richard Frith-Macdonald  <rfm@gnu.org>

	Postgres.m: Use E'...' syntax for bytea if it is available.

2007-09-14 Richard Frith-Macdonald  <rfm@gnu.org>

	Update to LGPL3

2007-07-21 Richard Frith-Macdonald  <rfm@gnu.org>

        * SQLClient.m: Fix retasin bug copying transactions.
	* JDBC.m: Update for new batch code

2007-07-09 Richard Frith-Macdonald  <rfm@gnu.org>

        * SQLClient.m: Post notifications upon connect and disconnect.

2007-07-07 Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.m: Fix error causing loss of some debug output when an
	exception occurs in a transaction.
	Rewrite transaction code to support execution with automatic retry of
	statements when batching.
	* JDBC.m: Update for new transaction code

2007-04-01 Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.h:
	* SQLClient.m:
	* testSQLite.m:
	* testJDBC.m:
	* MySQL.m:
	* Postgres.m:
	* GNUmakefile:
	* SQLite.m:
	* JDBC.m:
	* testMySQL.m: